--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,31 +1,4 @@
-<!--<div class="loader"><div class="loader_html"></div></div>-->
-
 <div id="wrap" class="grid_1200">
-	
-
-	
-	<div id="welcome-banner" class="section-warp ask-me">
-		<div class="container clearfix">
-			<div class="box_icon box_warp box_no_border box_no_background" box_border="transparent" box_background="transparent" box_color="#FFF">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="welcome">
-							<h1>Welcome to <span style="font-style:italic;"><span style="font-weight:500;">NKU</span>Net</span></h1>
-							<h3>The Q&A resource for Northern Kentucky University students and faculty looking for guidance regarding course material. Ask a question, browse existing ones, and vote on answers to help fellow Norse solve their problems.</h3>
-						</div>
-					
-						<form class="form-style form-style-2">
-							<p>
-								<input type="text" id="question_title" placeholder="Ask a question..." >
-								<i class="icon-pencil"></i>
-								<span class="color button small publish-question">Ask Now</span>
-							</p>
-						</form>
-					</div>
-				</div><!-- End row -->
-			</div><!-- End box_icon -->
-		</div><!-- End container -->
-	</div><!-- End section-warp -->
 	
 	<section class="container main-content">
 		<div class="row">
@@ -45,10 +18,18 @@
 								<h2>
 									<%= link_to question.title, question_path(question) %>
 								</h2>
-								<a class="question-report" href="#">Report</a>
-								<div class="question-type-main"><i class="icon-question-sign"></i>Question</div>
+								<% if current_user.admin? %>
+									<a class="question-type-main" href="<%= edit_question_path(question) %>"><i class="icon-pencil"></i>Edit</a>
+									<%= link_to(question_path(question), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'question-report red-bg') do %>
+										<i class="icon-trash"></i>Delete
+									<% end %>
+								<% end %>
+								
+								<% if current_user == question.user %>
+									<a class="question-report" href="<%= edit_question_path(question) %>"><i class="icon-pencil"></i>Edit</a>
+								<% end %>
 								<div class="question-author">
-									<a href="<%= user_path(question.user.id) %>" original-title="<%= question.user.name %>" class="question-author-img tooltip-n"><span></span><img alt="" src="http://placehold.it/60x60/FFF/444"></a>
+									<a href="<%= user_path(question.user.id) %>"  original-title="<%= question.user.name %>" class="question-author-img"><span></span><img alt="" src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-48.png"></a>
 								</div>
 								<div class="question-inner">
 									<div class="clearfix"></div>
@@ -57,8 +38,8 @@
 										<span class="question-answered question-answered-done"><i class="icon-ok"></i>solved</span>
 									</div>
 									<span class="question-category"><a href="#"><i class="icon-folder-close"></i>CSC 440</a></span>
-									<span class="question-date"><i class="icon-time"></i><%= time_ago_in_words(question.created_at) %> ago</span>
-									<span class="question-comment"><a href="<%= question_path(question) %>#bio"><i class="icon-comment"></i><%= pluralize(question.answers.count, "Answer") %></a></span>
+									<span class="question-date"><i class="icon-time"></i>Updated <%= question.updated_at.strftime("%b %e %Y %l:%M %p") %></span>
+									<span class="question-comment"><a href="<%= question_path(question) %>#bio" class="smoothScroll"><i class="icon-comment"></i><%= pluralize(question.answers.count, "Answer") %></a></span>
 									<div class="clearfix"></div>
 								</div>
 							</article>
@@ -76,21 +57,21 @@
 					<ul>
 						<li>
 							<div class="author-img">
-								<a href="#"><img width="60" height="60" src="http://placehold.it/60x60/FFF/444" alt=""></a>
+								<a href="#"><img width="60" height="60" src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-48.png" alt=""></a>
 							</div> 
 							<h6><a href="#">Jake</a></h6>
 							<span class="comment">12 Points</span>
 						</li>
 						<li>
 							<div class="author-img">
-								<a href="#"><img width="60" height="60" src="http://placehold.it/60x60/FFF/444" alt=""></a>
+								<a href="#"><img width="60" height="60" src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-48.png" alt=""></a>
 							</div> 
 							<h6><a href="#">Dan</a></h6>
 							<span class="comment">10 Points</span>
 						</li>
 						<li>
 							<div class="author-img">
-								<a href="#"><img width="60" height="60" src="http://placehold.it/60x60/FFF/444" alt=""></a>
+								<a href="#"><img width="60" height="60" src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-48.png" alt=""></a>
 							</div> 
 							<h6><a href="#">Trong</a></h6>
 							<span class="comment">5 Points</span>
@@ -101,11 +82,11 @@
 				<div class="widget">
 					<h3 class="widget_title">Recent Questions</h3>
 					<ul class="related-posts">
-						<% Question.order('created_at DESC').limit(2).each do |q| %>
+						<% Question.order('updated_at DESC').limit(2).each do |q| %>
 						<li class="related-item">
 							<h3><a href="#"><%= q.title %></a></h3>
 							<p><%= truncate(q.description, length: 70) %></p>
-							<div class="clear"></div><span><%= time_ago_in_words(q.created_at) %> ago</span>
+							<div class="clear"></div><span><%= q.updated_at.strftime("%b %e %Y %l:%M %p") %></span>
 						</li>
 						<% end %>
 						
@@ -118,4 +99,5 @@
 </div><!-- End wrap -->
 
 <div class="go-up"><i class="icon-chevron-up"></i></div>
+
 
