--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+      <a href="<%= root_path %>" class="navbar-brand"/><img src="/assets/logo.png") width="80px"/></a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
