--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,15 @@
   <div class="row">
     <h3>Users</h3>
     <div class="column">
-      <table class="table">
+      <table class="table table-hover">
+        <thead class="thead center">
+          <tr>
+            <th class="align-middle">Name</th>
+            <th class="align-middle">Email</th>
+            <th class="align-middle">Role</th>
+            
+          </tr>
+        </thead>
         <tbody>
           <% @users.each do |user| %>
             <tr>
