--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -54,7 +54,7 @@
 				
 				<div class="about-author clearfix">
 				    <div class="author-image">
-				    	<a href="<%= user_path(@question.user.id) %>" original-title="<%= @question.user.name %>" class="tooltip-n"><img alt="" src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-48.png"></a>
+				    	<a href="<%= user_path(@question.user.id) %>" original-title="<%= @question.user.name %>" class=""><img alt="" src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-48.png"></a>
 				    </div>
 				    <div class="author-bio" id="bio">
 				        <h4>Question Posted By <%= link_to @question.user.name, user_path(@question.user.id) %></h4>
@@ -69,18 +69,36 @@
 					<ol class="commentlist clearfix">
 					    <% @question.answers.order('created_at DESC').each do |answer| %>
 					    <li class="comment">
-					        <div class="comment-body comment-body-answered clearfix"> 
-					            <div class="avatar"><img alt="" src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-48.png"></div>
+					        <div class="comment-body comment-body-answered clearfix">
+                      <div   class="avatar">
+                        <a href="<%= user_path(answer.user) %>" original-title="<%= answer.user.name %>" class=""><img alt="" src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-48.png"></a>
+                      </div>
+					            <!--<div class="avatar"><img alt="" src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-48.png"></div>-->
 					            <div class="comment-text">
 					                <div class="author clearfix">
 					                	<div class="comment-author"><%= link_to answer.user.name, user_path(answer.user) %></div>
 					                	<div class="comment-vote">
 						                	<ul class="question-vote">
-						                		<li><a href="#" class="question-vote-up" title="Like"></a></li>
-						                		<li><a href="#" class="question-vote-down" title="Dislike"></a></li>
+                                <!-- TODO -->
+                                <% if answer.user != current_user %>
+									                <%= link_to '', like_answer_path(answer), method: :put, class:'question-vote-up' + ((current_user.voted_up_on? answer) ? ' green' : '') %>
+									                <%= link_to '', dislike_answer_path(answer), method: :put, class:'question-vote-down' + ((current_user.voted_down_on? answer) ? ' red' : '') %>
+                                <% else %>
+                                  <div class="question-vote-up"></div>
+                                  <div class="question-vote-down"></div>
+                                <% end%>
 						                	</ul>
 					                	</div>
-					                	<span class="question-vote-result">+1</span>
+                            <% @vote_difference = answer.get_upvotes.size - answer.get_downvotes.size %>
+                              <span class="question-vote-result
+                                <% if @vote_difference > 0 %>
+                                  green
+                                <% elsif @vote_difference < 0 %>
+                                  red
+                                <% else %>
+                                <% end %>">
+                              <%= @vote_difference %></span>
+
 					                	<div class="comment-meta">
 					                        <div class="date"><i class="icon-time"></i><%= answer.created_at.strftime("%b %e %Y %l:%M %p") %></div> 
 					                    </div>
@@ -141,7 +159,7 @@
 			</div><!-- End main -->
 			<aside class="col-md-3 sidebar">
 				<div class="widget">
-					<h3 class="widget_title">Related questions</h2>
+					<h3 class="widget_title">Related questions</h3>
 					<ul class="related-posts">
 						<li class="related-item"><h3><a href="#"><i class="icon-double-angle-right"></i>This Is My Second Poll Question</a></h3></li>
 						<li class="related-item"><h3><a href="#"><i class="icon-double-angle-right"></i>This is my third Question</a></h3></li>
@@ -179,7 +197,7 @@
     }
 	});
 	
-	$('[id^=editAnswerForm]').hide();
+	$("[id^=editAnswerForm]").hide();
 	
 	function editAnswer(id) {
 		if($('#editAnswerForm' + id).is(":visible")){
